real convolution example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,4 +10,5 @@ cmake_minimum_required ( VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION} )
 project ( examples )
 
 add_subdirectory ( test_plan_dft )
+add_subdirectory ( rconv )
 
