Add  as part of intermediate dependency names

--- a/examples/test_plan_dft/CMakeLists.txt
+++ b/examples/test_plan_dft/CMakeLists.txt
@@ -22,12 +22,12 @@ set ( _prefix2 imddft )
 ##  ===== For most examples you should not need to modify anything below this line =====
 
 run_driver_program ( ${_prefix1} ${_stem} )
-set ( _driver1 ${${_prefix1}_driver} )
+set ( _driver1 ${PROJECT_NAME}.${${_prefix1}_driver} )
 set ( _plan1 ${${_prefix1}_plan} )
 set ( _hdr1  ${_prefix1}.${_stem}.codegen.hpp )
 
 run_driver_program ( ${_prefix2} ${_stem} )
-set ( _driver2 ${${_prefix2}_driver} )
+set ( _driver2 ${PROJECT_NAME}.${${_prefix2}_driver} )
 set ( _plan2 ${${_prefix2}_plan} )
 set ( _hdr2  ${_prefix2}.${_stem}.codegen.hpp )
 
@@ -51,8 +51,8 @@ create_source_file ( ${_gfile} ${_ccode2} )
 
 add_executable   ( ${BUILD_PROGRAM} ${BUILD_PROGRAM}.cpp ${_ccode1} ${_ccode2} ${_hdr1} ${_hdr2} )
 add_dependencies ( ${BUILD_PROGRAM} ${_driver1} ${_driver2}
-                   NAME.${_plan1} NAME.${_gen1} NAME.${_ccode1}
-                   NAME.${_plan2} NAME.${_gen2} NAME.${_ccode2} )
+                   NAME.${PROJECT_NAME}.${_plan1} NAME.${PROJECT_NAME}.${_gen1} NAME.${PROJECT_NAME}.${_ccode1}
+                   NAME.${PROJECT_NAME}.${_plan2} NAME.${PROJECT_NAME}.${_gen2} NAME.${PROJECT_NAME}.${_ccode2} )
 
 target_include_directories ( ${BUILD_PROGRAM} PRIVATE ${${PROJECT_NAME}_BINARY_DIR} ${CMAKE_BINARY_DIR} )
 
