--- a/examples/test_plan_dft/CMakeLists.txt
+++ b/examples/test_plan_dft/CMakeLists.txt
@@ -7,8 +7,10 @@
 
 cmake_minimum_required ( VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION} )
 
-##  specify GPU for Cuda/GPU code generation, otherwise, leave as default CPU
-set ( _codegen GPU )
+##  _codegen specifies CPU or GPU (serial or CUDA) code generation.  Will be set
+##  in parent so don't change here, **unless** only CPU code generation is
+##  supported, in which case uncomment to follow line to set to CPU 
+##  set ( _codegen CPU )
 
 if ( ${_codegen} STREQUAL "GPU" )
     set ( _lang_add LANGUAGES CUDA )
