trying to get warpx to build in new system

--- a/examples/warpx/CMakeLists.txt
+++ b/examples/warpx/CMakeLists.txt
@@ -33,8 +33,7 @@ list ( APPEND _all_build_srcs ${BUILD_PROGRAM}.${_suffix} )
 
 add_executable   ( ${BUILD_PROGRAM} ${_all_build_srcs} )
 add_dependencies ( ${BUILD_PROGRAM} ${_all_build_deps} )
-
-target_include_directories ( ${BUILD_PROGRAM} PRIVATE ${${PROJECT_NAME}_BINARY_DIR} ${CMAKE_BINARY_DIR} )
+target_include_directories ( ${BUILD_PROGRAM} PRIVATE ${${PROJECT_NAME}_BINARY_DIR} ${CMAKE_BINARY_DIR} . )
 
 set ( INSTALL_DIR_TARGET ${CMAKE_BINARY_DIR}/bin )
 
