--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,7 +9,7 @@ cmake_minimum_required ( VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION} )
 
 project ( examples )
 
-add_subdirectory ( warpx )
+##add_subdirectory ( warpx )
 add_subdirectory ( test_plan_dft )
 add_subdirectory ( rconv )
 add_subdirectory ( hockney )
