--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,7 +17,7 @@ project ( examples )
 ##                  subdir name   CPU       GPU
 
 manage_add_subdir ( test_plan_dft TRUE      TRUE )
-manage_add_subdir ( hockney       TRUE      TRUE )
+manage_add_subdir ( hockney       TRUE      FLASE )
 manage_add_subdir ( rconv         TRUE      FALSE )
 manage_add_subdir ( verify        TRUE      FALSE )
 manage_add_subdir ( warpx         TRUE      FALSE )
