Add _USE_MATH_DEFINES (as default on Windows)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ else ()
     message ( STATUS "_codegen = ${_codegen}" )
 endif ()
 
+set ( ADDL_COMPILE_FLAGS -D_USE_MATH_DEFINES )
 if ( ${_codegen} STREQUAL "GPU" )
     if (WIN32)
 	set ( CUDA_COMPILE_FLAGS -rdc=false )
